# Copyright 2025 DNAi inc.

# Dual-licensed under the DNAi Free License v1.1 and the
# DNAi Commercial License v1.1.
# See the LICENSE files in the project root for details.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dnhealth"
version = "0.1.0"
description = "Production-grade Python library for HL7v2, HL7v3, and FHIR R4 healthcare integration standards"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Dual-licensed under the DNAi Free License v1.1 and the DNAi Commercial License v1.1. See LICENSE and LICENSE-COMMERCIAL files in the project root for details."}
authors = [
    {name = "DNHealth Contributors"},
]
keywords = ["hl7", "hl7v2", "hl7v3", "fhir", "healthcare", "integration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps",
]

dependencies = [
    # Minimal runtime dependencies - standard library preferred
    # lxml is optional but recommended for robust XML handling
]

[project.optional-dependencies]
xml = ["lxml>=4.9.0"]

[project.scripts]
hl7v2tool = "dnhealth.dnhealth_hl7v2.cli:main"
hl7v3tool = "dnhealth.dnhealth_hl7v3.cli:main"
fhirtool = "dnhealth.dnhealth_fhir.cli:main"

[project.urls]
Homepage = "https://github.com/dnhealth/dnhealth"
Documentation = "https://github.com/dnhealth/dnhealth#readme"
Repository = "https://github.com/dnhealth/dnhealth"

[tool.hatchling.build.targets.wheel]
packages = ["src/dnhealth"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --timeout=300"
timeout = 300
timeout_method = "thread"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/test_*.py"]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true
skip_covered = false
skip_empty = true

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

